# pdchess

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  main.lua  mcumax.lua  pdxinfo
.sentry-native/4dfc746b-89d6-4c26-b413-160fc05f434d.run/: __sentry-event  session.json
demo/: CMakeLists.txt
demo/src/: main.c
include/: pdchess.h
main.pdx/: LICENSE  build-lua.ps1  pdxinfo
main.pdx/tests/: test_mcumax.pdz
src/: pdchess.c  syscalls.c
tests/: test_mcumax.lua  test_pdchess.c
tests/playdate_watchdog/: main.lua  pdxinfo
